tests/baselines/reference/for-of6.errors.txt
for-of6.ts(1,6): error TS2304: Cannot find name 'v'.


==== for-of6.ts (1 errors) ====
    for (v of [0]) {
         ~
!!! error TS2304: Cannot find name 'v'.
        let v;
    }